revops-lab/main/default/objects/Sales_Approval_Request__c/Sales_Approval_Request__c.object-meta.xml
<CustomObject>
    <description>One approval request per submission. Created and decided only by SalesQuoteApprovalService; direct edits are refused by SalesApprovalRequestTriggerHandler.</description>
    <label>Sales Approval Request</label>
    <nameField>
        <displayFormat>SAR-{000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Approval Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>