revops-lab/main/default/objects/Sales_Approval_Request__c/fields/Approval_Tier__c.field-meta.xml
<CustomField>
    <fullName>Approval_Tier__c</fullName>
    <label>Approval Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>