revops-lab/main/default/objects/Sales_Approval_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Approval Requests (Approver)</relationshipLabel>
    <relationshipName>Sales_Approvals_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>