revops-lab/main/default/objects/Sales_Approval_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>