revops-lab/main/default/objects/Sales_Approval_Request__c/fields/Quote_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Configuration__c</fullName>
    <label>Quote Configuration</label>
    <referenceTo>Quote_Configuration__c</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>Approval_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>