revops-lab/main/default/objects/Sales_Approval_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Approval Requests (Requester)</relationshipLabel>
    <relationshipName>Sales_Approvals_Requested</relationshipName>
    <type>Lookup</type>
</CustomField>