revops-lab/main/default/objects/Sales_Approval_Request__c/fields/Requested_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount_Percent__c</fullName>
    <label>Requested Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>