revops-lab/main/default/objects/Sales_Approval_Request__c/fields/Threshold_Percent__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Percent__c</fullName>
    <label>Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>