revops-lab/main/default/objects/Sales_Approval_Request__c/validationRules/Rejection_Requires_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Requires_Comment</fullName>
    <active>true</active>
    <description>A rejection must explain itself (at least 10 characters). Also enforced in Apex for a clear message.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, 'Rejected'), LEN(Comments__c) &lt; 10)</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Explain the rejection in at least 10 characters.</errorMessage>
</ValidationRule>